tests-integration/fixtures/checking2/120_derive_newtype_missing_given/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
Identity :: forall (@a :: Type). (a :: Type) -> Identity (a :: Type)

Types
Identity :: Type -> Type

Derived
derive forall (t1 :: Type). Show (Identity (t1 :: Type))

Roles
Identity = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Show (t1 :: Type)
  --> 7:1..7:42
  |
7 | derive newtype instance Show (Identity a)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
